--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install --upgrade pip
-          pip install -r tests/requirements_test.txt
+          pip install -r tests/test_requirements.txt
       - name: Run tests
         run: |
           pytest tests/ --cov=custom_components/alliant_energy --cov-report=xml
