--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -30,16 +30,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install requirements
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r tests/test_requirements.txt
+          pip install -r tests/requirements_test.txt
       - name: Run tests
         run: |
-          pytest tests/ --cov=custom_components/alliant_energy --cov-report=xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+          pytest \
+            -v \
+            --cov=custom_components.alliant_energy \
+            --cov-report=xml \
+            tests/test_*.py \
+            --ignore=tests/test_alliant_cli.py
